# mcp-aidev

./: .cursorrules  .dockerignore  .gitignore  AUTOMACAO_COMPLETA.md  BRAINSTORM_IMPLEMENTADO.md  COMANDOS_MCP_RAPIDOS.md  DEPLOY_REALIZADO.md  DITADO_VOZ_IMPLEMENTADO.md  Dockerfile  MELHORIAS_GESTAO_PROJETOS.md  MODO_INTERATIVO_PADRAO.md  PRP_IMPLEMENTADO.md  QUANDO_FAZER_DEPLOY.md  README.md  RELATORIO_FERRAMENTAS_CURSOR.md  RESUMO_AUTOMACAO.md  TDD_IMPLEMENTADO.md  USO_RAPIDO.md  comandos_mcp.md  config.example.py  criar_projeto_mcp.py  executar_projeto_completo.py  executar_run_agent.py  listar_projetos_mcp.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  requirements_voice.txt  setup.py  test_server_integration.py
.github/workflows/: ci.yml
.history/: GUIA_MCP_CURSOR_20251117034400.md  GUIA_MCP_CURSOR_20251117034407.md  RESUMO_COMPLETO_PROJETO_20251117052751.md  RESUMO_COMPLETO_PROJETO_20251117052801.md
agent/: __init__.py  config.py  graph.py  graph_auto.py  implementer.py  llm.py  main.py  nodes.py  nodes_auto.py  nodes_brainstorm.py  prp.py  state.py  tools.py
docs/: API.md
html_test/: README.md
mcp_client/: __init__.py  handlers.py  server.py  voice_handler.py
src/: __init__.py  main.py
src/database/: __init__.py  connection.py  models.py
src/mcp/: __init__.py  protocol.py  tools.py  tools_auto.py
src/services/: __init__.py  project_service.py
tests/: test_api.py  test_database.py  test_mcp_protocol.py  test_project_structure.py  test_tools.py
